@@ -32,7 +32,8 @@ GHashTable *
 e_xml_to_hash (xmlDoc *doc, EXmlHashType type)
 {
 	xmlNode *root, *node;
-	const char *key, *value;
+	const char *key;
+	xmlChar *value;
 	GHashTable *hash;
 
 	hash = g_hash_table_new (g_str_hash, g_str_equal);
