@@ -1,3 +1,14 @@
+2003-07-23  Dan Winship  <danw@ximian.com>
+
+	* e-component-listener.c (connection_listen_cb): Fix a non-ANSI
+	switch label.
+
+	* e-gui-utils.c: only include "art/empty.xpm" if
+	HAVE_LIBGNOMEUI_GNOME_ICON_LOOKUP_H isn't defined
+
+	* e-xml-hash-utils.c (e_xml_to_hash): Deconstify a non-const
+	variable to fix a warning.
+
 2003-07-03  JP Rosevear  <jpr@ximian.com>
  
  	* e-xml-hash-utils.c (foreach_save_func): encode the text
